# rocRAND

./: .clang-format  .gitignore  .gitignore.develop  .gitlab-ci-gputest.yml  .gitlab-ci.yml  .gitmodules  .wordlist.txt  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Jenkinsfile  LICENSE.txt  PR-Test.txt  README.md  clang-format-apply.sh  clang-format-diff.sh  clang_format.patch  codecov.yml  comments.json  conanfile.py  custom.properties  generate-suggestions.sh  install  install.sh  pr.diff  rmake.py  rtest.py  rtest.xml  suggest-changes.sh  testcpp.cpp  toolchain-linux.cmake  toolchain-windows.cmake
.azuredevops/: rocm-ci.yml
.github/: CODEOWNERS  CODEOWNERS~  dependabot.yml
.jenkins/: asan.groovy  codecov.groovy  common.groovy  cppcheck.groovy  debug.groovy  precheckin.groovy  sanitizer.groovy  static.groovy  staticanalysis.groovy  staticlibrary.groovy
benchmark/: CMakeLists.txt  benchmark_curand_device_api.cpp  benchmark_curand_generate.cpp  benchmark_curand_host_api.cpp  benchmark_curand_kernel.cpp  benchmark_curand_utils.hpp  benchmark_rocrand_device_api.cpp  benchmark_rocrand_generate.cpp  benchmark_rocrand_host_api.cpp  benchmark_rocrand_kernel.cpp  benchmark_rocrand_utils.hpp  benchmark_utils.hpp  benchmark_utils.hpp.in  cmdparser.hpp  custom_csv_formater.hpp
benchmark/tuning/: CMakeLists.txt  benchmark_tuning.cpp  benchmark_tuning.hpp  benchmark_tuning_lfsr113.cpp  benchmark_tuning_mrg31k3p.cpp  benchmark_tuning_mrg32k3a.cpp  benchmark_tuning_mt19937.cpp  benchmark_tuning_mtgp32.cpp  benchmark_tuning_philox.cpp  benchmark_tuning_setup.hpp.in  benchmark_tuning_threefry2x32_20.cpp  benchmark_tuning_threefry2x64_20.cpp  benchmark_tuning_threefry4x32_20.cpp  benchmark_tuning_threefry4x64_20.cpp  benchmark_tuning_xorwow.cpp  benchmarked_generators.hpp  distribution_traits.hpp
cmake/: Common.cmake  Dependencies.cmake  (+9 more)
crush_test/: CMakeLists.txt  crush_test_philox.cpp  crush_test_philox_uniform.cpp  crush_test_rocrand_generate.cpp  crush_test_rocrand_generate_uniform.cpp  file_common.hpp
test/: CMakeLists.txt  hipgraphs_doc_sample.hpp  rocrand_lfsr113.cpp  square_test.cpp  test_common.hpp  test_config_dispatch.cpp  test_dieharder.cpp  test_hiprand_api.cpp  test_hiprand_cpp_wrapper.cpp  test_hiprand_kernel.cpp  test_log_normal_distribution.cpp  test_normal_distribution.cpp  test_poisson_distribution.cpp  test_rocrand_base_generator.cpp  test_rocrand_basic.cpp  test_rocrand_common.hpp  test_rocrand_cpp_basic.cpp  test_rocrand_cpp_wrapper.cpp  test_rocrand_generate.cpp  test_rocrand_generate_log_normal.cpp  test_rocrand_generate_normal.cpp  test_rocrand_generate_poisson.cpp  test_rocrand_generate_uniform.cpp  test_rocrand_generator_type.cpp  test_rocrand_hipgraphs.cpp  test_rocrand_host.cpp  test_rocrand_kernel_lfsr113.cpp  test_rocrand_kernel_mrg.cpp  test_rocrand_kernel_mrg32k3a.cpp  test_rocrand_kernel_mtgp32.cpp  test_rocrand_kernel_philox4x32_10.cpp  test_rocrand_kernel_scrambled_sobol32.cpp  test_rocrand_kernel_scrambled_sobol64.cpp  test_rocrand_kernel_sobol32.cpp  test_rocrand_kernel_sobol64.cpp  test_rocrand_kernel_threefry2x32_20.cpp  test_rocrand_kernel_threefry2x64_20.cpp  test_rocrand_kernel_threefry4x32_20.cpp  test_rocrand_kernel_threefry4x64_20.cpp  test_rocrand_kernel_xorwow.cpp  (+19 more)
test/cpp_wrapper/: CMakeLists.txt
test/cpp_wrapper/cmake/: Dependencies.cmake
test/crush/: CMakeLists.txt  COPYING.MIT  cmdparser.hpp  crush_test_rocrand.cpp  crush_test_rocrand_generate_log_normal.cpp  crush_test_rocrand_generate_normal.cpp  file_common.hpp  pearson_chi_squared_common.hpp  pearson_chi_squared_curand.cpp  pearson_chi_squared_curand_kernel.cpp  pearson_chi_squared_rocrand.cpp  pearson_chi_squared_rocrand_kernel.cpp  plot.sh  stat_test_common.hpp  stat_test_curand_generate.cpp  stat_test_curand_kernel.cpp  stat_test_rocrand_generate.cpp  stat_test_rocrand_kernel.cpp
test/fortran/: CMakeLists.txt  fruit_helpers.f90  fruit_test_driver.F90  fruit_test_driver_hiprand.f90  fruit_test_driver_rocrand.f90  rocrand_test.f90  test_hiprand.f90  test_rocrand.f90
test/fortran/fruit/: fruit.f90
test/fortran/hip_fortran/: hip_fortran.cpp  hipfor.f90
test/internal/: CMakeLists.txt  test_config_dispatch.cpp  test_cpp_utils.cpp  test_log_normal_distribution.cpp  test_normal_distribution.cpp  test_poisson_distribution.cpp  test_rocrand_config_dispatch.cpp  test_rocrand_generator_type.cpp  test_rocrand_lfsr113_prng.cpp  test_rocrand_mrg_prng.cpp  test_rocrand_mt19937_prng.cpp  test_rocrand_mtgp32_prng.cpp  test_rocrand_philox_prng.cpp  test_rocrand_prng.hpp  test_rocrand_scrambled_sobol32_qrng.cpp  test_rocrand_scrambled_sobol64_qrng.cpp  test_rocrand_sobol32_qrng.cpp  test_rocrand_sobol64_qrng.cpp  test_rocrand_sobol_qrng.hpp  test_rocrand_threefry2x32_20_prng.cpp  test_rocrand_threefry2x64_20_prng.cpp  test_rocrand_threefry4x32_20_prng.cpp  test_rocrand_threefry4x64_20_prng.cpp  test_rocrand_threefryNx32_20_prng.hpp  test_rocrand_threefryNx64_20_prng.hpp  test_rocrand_xorwow_prng.cpp  test_state_dispatcher.cpp  test_uniform_distribution.cpp
test/linkage/: CMakeLists.txt  get_hiprand_version.cpp  get_hiprand_version.hpp  get_rocrand_version.cpp  get_rocrand_version.hpp  test_hiprand_linkage.cpp  test_rocrand_linkage.cpp
test/package/: CMakeLists.txt  test_hiprand.cpp  test_rocrand.cpp
test/parity/: CMakeLists.txt  parity.cpp  parity.hpp  parity_curand.cpp  parity_rocrand.cpp
test/test_utils/: rocrand_cpp_wrapper_traits.hpp  test_matrix.hpp
tools/: AsmEmbedSymbol.cmake  CMakeLists.txt  asm_embed_symbol.S.in  bin2typed.cpp  lfsr113_precomputed_generator.cpp  mrg31k3p_precomputed_generator.cpp  mrg32k3a_precomputed_generator.cpp  mt19937_precomputed_generator.cpp  scrambled_sobol32_constants_generator.cpp  scrambled_sobol32_direction_vector_generator.cpp  scrambled_sobol64_constants_generator.cpp  scrambled_sobol64_direction_vector_generator.cpp  sobol32_direction_vector_generator.cpp  sobol64_direction_vector_generator.cpp  sobol_direction_vector_generator.cpp  sobol_utils.hpp  utils.hpp  utils_matrix_exponentiation.hpp  xorwow_precomputed_generator.cpp
(+122 files in other folders)
